--- a/src/infranet_team1/templates/hr/attendance.html
+++ b/src/infranet_team1/templates/hr/attendance.html
@@ -29,6 +29,12 @@
             <button class="small_ui" type="submit">퇴근하기</button>
         </form>
     {% endif %}
+
+    <script>
+    function confirmClockOut() {
+    return confirm("정말 퇴근하시겠습니까?");
+}
+</script>
 </div>
 
 <div>
